Deterministic random testing for broad-phase detectors